--- a/extentV5/ExtentReport.html
+++ b/extentV5/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">NopCommerce HTML Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Aug 22, 2022 10:09:09 PM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 8, 2022 11:57:50 AM</span></a>
 </li>
 </ul>
 </div>
@@ -87,13 +87,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Aug 22, 2022 10:09:09 PM</h3>
+<h3>Sep 8, 2022 11:57:50 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Aug 22, 2022 10:09:14 PM</h3>
+<h3>Sep 8, 2022 11:57:50 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -166,7 +166,7 @@ var timeline = {
 </tr>
 <tr>
 <td>JDK version</td>
-<td>11.0.11</td>
+<td>11.0.12</td>
 </tr>
 </tbody>
 </table></div>
